objects in paragraph

--- a/stuff/allmyobjects.html
+++ b/stuff/allmyobjects.html
@@ -3,5 +3,5 @@ layout: page
 title: Collection Objects
 ---
 {% for entry in site.data.objects %}
-  {{ entry.name }}
+  <p>{{ entry.name }}</p>
 {% endfor %}
