change hr2 to h2 in recipes.hmtl, pictures do not show yet

--- a/recipes.html
+++ b/recipes.html
@@ -5,6 +5,6 @@ title: Recipes and pictures
 
 {% for object in site.recipes %}
 {{ object.url}}
-  <hr2>{{ object.title}} : {{object.year}}</hr2>
+  <h2>{{ object.title}} : {{object.year}}</h2>
 <img src="{{object.image}}" alt="{{object.title}}">
 {% endfor %}
